# playground

./: .gitmodules
chat/client/: Cargo.toml
chat/client/site/: package-lock.json  package.json  vite.config.ts
chat/client/site/src/: App.tsx  index.tsx
chat/client/src/: lib.rs
chat/server/: Cargo.toml
chat/server/certs/: 172.20.17.234+3-key.pem  172.20.17.234+3.pem  cert.der  key.der
chat/server/src/: main.rs
