[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
renet = { path = "../renet/renet" }
renet_webtransport = { path = "../renet/renet_webtransport" }
web-sys = { version = "0.3.66", features = ["console"] }
