[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
log = "0.4.20"
tokio = "1.35.1"
renet = { path = "../renet/renet" }
renet_webtransport_server = { path = "../renet/renet_webtransport_server" }
env_logger = "0.10.1"
